# selenium-exa

./: README.md  docker-compose.yml  pyproject.toml
.devcontainer/: create.sh  devcontainer.json
doc/: selenium.md
selenium_example/: main.py
